# teggle-index-research

./: .gitignore  Cargo.toml  Makefile  README.md
sgx/: .gitignore  Makefile  README.md
sgx/app/: Cargo.toml  build.rs
sgx/app/src/: enclave.rs  exports.rs  main.rs  traits.rs
sgx/app/src/api/: server.rs
sgx/app/src/db/: mod.rs  rocksdb.rs
sgx/app/src/enclave/: allocate.rs  doorbell.rs  imports.rs  mod.rs
sgx/app/src/enclave/ecall/: allocate.rs  api.rs  init.rs  mod.rs
sgx/app/src/enclave/ocall/: allocate.rs  db.rs  mod.rs
sgx/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml
sgx/enclave/src/: lib.rs
sgx/enclave/src/api/: mod.rs  results.rs  session.rs
sgx/enclave/src/api/handler/: codec.rs  context.rs  dispatch.rs  mod.rs  request.rs  response.rs  router.rs  routes.rs  types.rs
sgx/enclave/src/api/middleware/: mod.rs  recovery.rs
sgx/enclave/src/api/reactor/: deferral.rs  exec.rs  httpc.rs  mod.rs  waker.rs
sgx/enclave/src/api/server/: config.rs  connection.rs  exec.rs  httpc.rs  mod.rs  server.rs  websocket.rs
sgx/enclave/src/api/service/: config.rs  connection.rs  mod.rs  server.rs
sgx/enclave/src/utils/: macros.rs  mod.rs  oom_handler.rs  pointers.rs  storage.rs
sgx/ffi-types/: Cargo.toml  cbindgen.toml
sgx/ffi-types/src/: lib.rs  types.rs
src/: main.rs
