[package]
name = "teggle-index-research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
indradb-lib = { version = "3.0.1", features = ["rocksdb-datastore"] }
#indradb-sled = "0.1.0"
rocksdb = "0.17.0"

[dependencies.uuid]
version = "0"
features = ["v5"]