[package]
name = "index-node"
version = "0.1.0"
authors = ["David Radunz <david@teggle.com>"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

enclave-ffi-types = { path = "../ffi-types" }
rocksdb = "0.17.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
