[package]
name = "index-node"
version = "0.1.0"
authors = ["David Radunz <david@teggle.com>"]
build = "build.rs"
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[features]
default = []
production = [
    "log/max_level_warn",
    "log/release_max_level_warn"
]

[dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

enclave-ffi-types = { path = "../ffi-types" }
parking_lot = "0.11"
num_cpus = "1.13.1"
rocksdb = { version = "0.17.0", features = ["multi-threaded-cf"] }
lazy_static = "1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']