[package]
name = "index-enclave"
version = "0.1.0"
authors = ["David Radunz <david@teggle.com>"]

[lib]
name = "index_enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
enclave-ffi-types = { path = "../ffi-types" }
uuid = { git = "https://github.com/mesalock-linux/uuid-sgx.git", features = ["v5"] }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
ring = { git = "https://github.com/mesalock-linux/ring-sgx.git" }
blake2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git", package = "blake2" }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git", package = "sha2" }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx.git", package = "digest" }
#protected_fs_rs = { git = "https://github.com/mesalock-linux/protected_fs_rs" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "untrusted_fs"] }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_alloc = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

#sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
