[package]
name = "index-enclave"
version = "0.1.0"
authors = ["David Radunz <david@teggle.com>"]
edition = "2018"

[lib]
name = "index_enclave"
crate-type = ["staticlib"]

[features]
default = []
production = [
    "log/max_level_warn",
    "log/release_max_level_error"
]

[dependencies]
enclave-ffi-types = { path = "../ffi-types" }
uuid = { git = "https://github.com/mesalock-linux/uuid-sgx.git", features = ["v5"] }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
pretty_env_logger = { git = "https://github.com/teggle-io/pretty-env-logger-sgx.git" }
ring = { git = "https://github.com/mesalock-linux/ring-sgx.git", tag = "v0.16.5" }
blake2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git", package = "blake2" }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx.git", package = "sha2" }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx.git", package = "digest" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
#protected_fs_rs = { git = "https://github.com/mesalock-linux/protected_fs_rs" }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", package = "serde" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx.git", package = "serde_derive" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
bytes = { git = "https://github.com/mesalock-linux/bytes-sgx.git" }
http = { git = "https://github.com/teggle-io/http-sgx.git" }
httparse = { git = "https://github.com/teggle-io/httparse-sgx.git" }
httpdate = { git = "https://github.com/teggle-io/httpdate-sgx.git" }
mio = { git = "https://github.com/mesalock-linux/mio-sgx.git", branch = "v0.6_sgx_1.1.3" }
mio_httpc = { git = "https://github.com/teggle-io/mio_httpc_sgx.git", branch = "v0.6_sgx_1.1.3", features = ["mesalock_sgx", "rtls"] }
net2 = { git = "https://github.com/mesalock-linux/net2-rs-sgx.git" }
futures = { git = "https://github.com/mesalock-linux/futures-rs-sgx.git" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "untrusted_fs", "untrusted_time", "net"] }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_alloc = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

#sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
#sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
